(fix): text-align left still if not owner

--- a/plugins/Messenger/app/messenger.scss
+++ b/plugins/Messenger/app/messenger.scss
@@ -207,7 +207,7 @@ minds-messenger{
         line-height: 14px;
       }
       .m-messenger-conversation-messages-message{
-        text-align:right;
+        text-align:left;
 
         img{
           border-radius: 50%;
